--- a/dqn.ipynb
+++ b/dqn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import torch\n",
     "from torch import nn, optim\n",
     "import random as rand\n",
+    "from copy import deepcopy\n",
     "from gym.envs.atari.atari_env import AtariEnv"
    ]
   },
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -40,56 +41,7 @@
       "Número de ações:\n",
       "Discrete(6)\n",
       "Significado das ações:\n",
-      "['NOOP', 'FIRE', 'RIGHT', 'LEFT', 'RIGHTFIRE', 'LEFTFIRE']\n",
-      "(array([[[ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        ...,\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0]],\n",
-      "\n",
-      "       [[ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        ...,\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0]],\n",
-      "\n",
-      "       [[ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        ...,\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0],\n",
-      "        [ 0,  0,  0]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        ...,\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22]],\n",
-      "\n",
-      "       [[80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        ...,\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22]],\n",
-      "\n",
-      "       [[80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        ...,\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22],\n",
-      "        [80, 89, 22]]], dtype=uint8), 0.0, False, {'ale.lives': 3})\n"
+      "['NOOP', 'FIRE', 'RIGHT', 'LEFT', 'RIGHTFIRE', 'LEFTFIRE']\n"
      ]
     }
    ],
@@ -98,8 +50,7 @@
     "print(\"Número de ações:\")\n",
     "print(env_si.action_space)\n",
     "print(\"Significado das ações:\")\n",
-    "print(env_si.get_action_meanings())\n",
-    "print(env_si.step(0))"
+    "print(env_si.get_action_meanings())"
    ]
   },
   {
@@ -111,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +72,6 @@
     "        \n",
     "        self.buffer = np.empty((capacity, 4), dtype=object)\n",
     "        self.pointer = 0\n",
-    "        \n",
-    "        for exp in range(capacity):\n",
-    "\n",
-    "            self.buffer[exp][0] = np.zeros((210, 160, 3))\n",
-    "            self.buffer[exp][1] = 0\n",
-    "            self.buffer[exp][2] = 2\n",
-    "            self.buffer[exp][3] = np.zeros((210, 160, 3))\n",
     "\n",
     "    def add(self, state, action, reward, state_next):\n",
     "\n",
@@ -144,7 +88,11 @@
     "\n",
     "    def save(self):\n",
     "\n",
-    "        np.save(\"dqnmemorybuffer\", self.buffer)\n"
+    "        np.save(\"dqnmemorybuffer\", self.buffer)\n",
+    "\n",
+    "    def load(self):\n",
+    "\n",
+    "        self.buffer = np.load(file=\"dqnmemorybuffer.npy\", allow_pickle=True)\n"
    ]
   },
   {
@@ -156,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,10 +197,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer = ReplayBuffer()\n",
+    "buffer.load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Treino"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss_array = np.array([])\n",
+    "episode_reward_array = np.array([])\n",
+    "\n",
+    "epsilon = 1\n",
+    "min_epsilon = 0.1\n",
+    "n_episodes = 1000\n",
+    "\n",
+    "for episode in range(n_episodes):\n",
+    "\n",
+    "    if episode%100==0:\n",
+    "\n",
+    "        qnet_copy = deepcopy(qnet)\n",
+    "        epsilon = max(0.1, epsilon-0.1)\n",
+    "\n",
+    "    env_si.reset()\n",
+    "    env_si.seed()\n",
+    "    state = env_si.render(mode=\"rgb_array\").transpose((2,0,1))\n",
+    "\n",
+    "    done = False\n",
+    "    total_reward = 0\n",
+    "\n",
+    "    while not done:\n",
+    "\n",
+    "        a = rand.random()\n",
+    "\n",
+    "        if a < epsilon:\n",
+    "\n",
+    "            action = rand.randint(0, 5)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            action = torch.argmax(qnet_copy.forward(state))\n",
+    "\n",
+    "        next_state, reward, done, _ = env_si.step(action)\n",
+    "        buffer.add(state, action, reward, next_state)\n",
+    "        total_reward += reward\n",
+    "\n",
+    "        samples = buffer.sample()\n",
+    "        Xs = np.zeros((32,3,210,160))\n",
+    "        Ys = np.zeros((32,6))\n",
+    "\n",
+    "        for i in range(32):\n",
+    "            Xs[i] = samples[i][0]\n",
+    "            Ys[i] = reward + qnet_copy.forward(next_state)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        output = qnet.forward(Xs)\n",
+    "        loss = loss_function(output, Ys)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        loss_array = np.append(loss_array, loss)\n",
+    "        print(f\"Loss é: {loss}\")\n",
+    "\n",
+    "    episode_reward_array = np.append(episode_reward_array, total_reward)\n",
+    "    print(f\"Reward total do episódio foi {total_reward}\")\n",
+    "\n",
+    "            \n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
